--- a/invoice-processing-automation.html
+++ b/invoice-processing-automation.html
@@ -104,22 +104,21 @@ Icon for services and Projects -->
 
 <!--header end-->
 
-
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('./images/accounts payable automation/man-using-smartphone-holding-credit-card_34168-1765.avif');">
+  <div class="banner-img" style="background-image: url('./images/invoice automation/invoice-banner.png');">
     <div class="banner-content">
       <div class="container">
-        <div class="row justify-content-between align-items-center">
+        <div class="mb-6 row justify-content-between align-items-center">
           <!-- Text, Button, and Content on the left (for mobile view) -->
           <div class="col-xl-6 col-lg-6 col-12 text-center order-1 order-md-1">
-            <h2 class="mb-4 mt-5" style="background-image: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">
+            <h2 class="mb-4 " style="background-image: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">
               Invoice Processing Automation
             </h2>
             <p class="mt-3">Maximize Productivity and Minimize Errors with AI-powered Invoice Automation</p>
             <!-- Modern Gradient Button -->
-            <a href="#demo-form" class="btn btn-gradient mt-4">Book a Demo</a>
+            <a href="#demo-form" class="btn btn-gradient mt-4 mb-4">Book a Demo</a>
           </div>
 
           <!-- Image on the right (will change to below content in mobile) -->
@@ -134,7 +133,7 @@ Icon for services and Projects -->
 <style>
   /* Move the banner content 40px higher */
 .banner-content {
-  margin-top: -40px; /* Moves the content 40px higher */
+  margin-top: -20px; /* Moves the content 40px higher */
 }
 
 /* Make sure the image is responsive */
@@ -171,6 +170,7 @@ Icon for services and Projects -->
   .banner-content .row {
     flex-direction: column; /* Changes the order to column */
     text-align: center; /* Centers text */
+    margin-top: -100px;
   }
 
   /* Image below content in mobile */
@@ -255,7 +255,7 @@ Icon for services and Projects -->
     </div>
   </div>
 </section> -->
-
+<br>
 <section >
     <div class="container">
         <div class="row justify-content-center text-center mb-5">
@@ -324,7 +324,7 @@ Icon for services and Projects -->
 </section>
 
 
-
+<br>
 <h2 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">AI-Powered Intelligence</h2>
 <p style="text-align: center; font-size: 14px; color: #D3D3D3;">
 Unlock advanced capabilities with AI-designed analytics for precise, actionable insights.
@@ -1373,7 +1373,6 @@ document.addEventListener("DOMContentLoaded", () => {
 }
 
 .faq-item.open .faq-question .faq-icon {
-  transform: rotate(45deg);
   transition: transform 0.3s ease;
 }
 </style>
@@ -1404,32 +1403,8 @@ function toggleFaq(element) {
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
-      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
-
-  function initializeFooter() {
-    // Collapsible Section Handling with Smooth Transition
-    document.querySelectorAll('.footer-section-title').forEach((title) => {
-      title.addEventListener('click', () => {
-        const section = title.parentElement;
-        const menu = section.querySelector('.footer-menu');
-        const isOpen = section.classList.toggle('open');
-
-        if (isOpen) {
-          menu.style.maxHeight = menu.scrollHeight + 'px';
-        } else {
-          menu.style.maxHeight = '0';
-        }
-      });
-    });
-
-    // Dynamic Current Year Update
-    document.addEventListener("DOMContentLoaded", () => {
-      const currentYear = new Date().getFullYear();
-      document.getElementById("currentYear").textContent = currentYear;
-    });
-  }
 </script>
 <!--footer end-->
 
