--- a/header.html
+++ b/header.html
@@ -200,7 +200,7 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="ai&ml-development.html"
+                          <a class="dropdown-item" href="ai-ml-development.html"
                             >AI & ML Development</a
                           >
                         </li>
