--- a/business-process-automation.html
+++ b/business-process-automation.html
@@ -92,7 +92,7 @@ Icon for services and Projects -->
                 Technical and non-technical users can build workflows with prebuilt components using Bautomate’s
                 low-code drag-and-drop modeller.
             </p>
-            <button class="banner-business-demo-button">Book a Demo</button>
+            <a href="contact.html"><button class="banner-business-demo-button">Book a Demo</button></a> 
         </div>
 
         <!-- Image Section -->
@@ -139,10 +139,10 @@ Icon for services and Projects -->
 
     <div class="quote-section">
         <p class="quote-heading">Are you looking for Business Process Automation?</p>
-        <button class="quote-button">
+        <a href="contact.html"><button class="quote-button">
             Request a Free Quote
             <span class="quote-arrow">&#8594;</span> <!-- Right arrow icon -->
-        </button>
+        </button></a>
     </div>
 
 
@@ -361,7 +361,7 @@ Icon for services and Projects -->
         <div class="left-journey">
           <h1>Kick-Start Your <span>Automation Journey</span></h1>
           <p>Accelerate your journey towards innovation and improve stability at scale with Bautomate's automation solutions</p>
-          <button class="cta-btn-journey">Try it for free</button>
+          <a href="contact.html"><button class="cta-btn-journey">Try it for free</button></a>
         </div>
         <div class="right-journey">
           <div class="card-container-journey">
