--- a/contextual-data-extraction.html
+++ b/contextual-data-extraction.html
@@ -88,8 +88,10 @@ Icon for services and Projects -->
         <p class="banner-business-description">
           Effortlessly extract and optimize data with Bautomate’s powerful LLM-driven automation
         </p>
-        <button class="banner-business-demo-button">Book a Demo</button>
-      </div>
+        <a href="contact.html">
+          <button class="banner-business-demo-button">Book a Demo</button>
+        </a>
+            </div>
 
       <!-- Image Section -->
       <div class="banner-business-image">
@@ -316,9 +318,11 @@ Icon for services and Projects -->
       </div>
 
       <div class="process-content-div">
-        <h3 class="process-content-title highlight">Discovery</h3>
-        <p class="process-content">We collaborate to understand your goals, audience, and needs, gaining insights into
-          your vision. This helps us create a strategic roadmap aligned with your objectives for project success.</p>
+        <h3 class="process-content-title highlight">Financial Services</h3>
+        <p class="process-content">Automate the extraction of data from complex financial documents, such as bank statements, 
+          invoices, and regulatory filings, to streamline compliance reporting, fraud detection, and financial analysis.
+
+        </p>
       </div>
 
     </section>
@@ -330,7 +334,7 @@ Icon for services and Projects -->
         <h1>Kick-Start Your <span>Automation Journey</span></h1>
         <p>Accelerate your journey towards innovation and improve stability at scale with Bautomate's automation
           solutions</p>
-        <button class="cta-btn-journey">Try it for free</button>
+          <a href="contact.html" ><button class="cta-btn-journey">Try it for free</button></a> 
       </div>
       <div class="right-journey">
         <div class="card-container-journey">
