--- a/document-management-system.html
+++ b/document-management-system.html
@@ -55,7 +55,6 @@
   <link href="css/innomiant.css" rel="stylesheet" type="text/css" />
   <!-- contact icon  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
   <link href="css/contact.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -89,7 +88,9 @@
         Avoid spending time in managing voluminous documents as DMS can scan, capture and organize business documents
         storing them securely in the cloud.
       </p>
-      <button class="banner-business-demo-button">Book a Demo</button>
+      <a href="contact.html">
+        <button class="banner-business-demo-button">Book a Demo</button>
+      </a>
     </div>
 
     <!-- Image Section -->
@@ -106,10 +107,10 @@
     <h6 class="quote-description-robotic">
       Our vision is to empower enterprises to boost productivity, improve cost-effectiveness, and provide superior
       customer service. </h6>
-    <button class="quote-button-robotic">
+      <a href="contact.html" ><button class="quote-button-robotic">
       Request a Free Quote
       <span class="quote-arrow-robotic">&#8594;</span> <!-- Right arrow icon -->
-    </button>
+    </button></a>
   </div>
 
   <section class="rpa-section">
@@ -367,7 +368,7 @@
       </h2>
     </div>
     <div class="button-container-goals">
-      <button class="cta-button-goals">Schedule a Demo</button>
+      <a href="contact.html" ><button class="cta-button-goals">Schedule a Demo</button></a>
     </div>
   </div>
 
@@ -379,7 +380,7 @@
       <h1>Kick-Start Your <span>Automation Journey</span></h1>
       <p>Accelerate your journey towards innovation and improve stability at scale with Bautomate's automation solutions
       </p>
-      <button class="cta-btn-journey">Try it for free</button>
+      <a href="contact.html"><button class="cta-btn-journey">Try it for free</button></a>
     </div>
     <div class="right-journey">
       <div class="card-container-journey">
