--- a/enquiry-automation.html
+++ b/enquiry-automation.html
@@ -86,7 +86,7 @@
                 Intelligent AI Automation.
             </p>
             <div class="enquiry-demobutton">
-                <button class="banner-business-demo-button">Request a Demo</button>
+                <a href="contact.html" ><button class="banner-business-demo-button">Request a Demo</button></a>
             </div>
         </div>
     </div>
