--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -214,9 +214,9 @@
         Want to revolutionize every aspect of your
         business with the magic touch of IoT?
       </div>
-      <button class="cta-button">
+      <a href="contact.html" class="cta-button">
         <span>Get Started</span>
-      </button>
+      </a>
     </div>
   </div>
 
@@ -430,7 +430,7 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
         <h3>
             Ready to <span class="bold-text">Embark on this Transformative Journey?</span>
         </h3>
-        <button class="get-started-journey">Get Started</button>
+        <a href="contact.html"> <button class="get-started-journey">Get Started</button></a>
     </div>
     <div class="banner-image-journey">
         <img src="images/Innomiant solutions/journey-iot.jpg" alt="Transformative Journey Illustration">
