--- a/robotic-process-automation.html
+++ b/robotic-process-automation.html
@@ -564,7 +564,7 @@
         <div class="left-journey">
           <h1>Kick-Start Your <span>Automation Journey</span></h1>
           <p>Accelerate your journey towards innovation and improve stability at scale with Bautomate's automation solutions</p>
-          <button class="cta-btn-journey">Try it for free</button>
+          <a href="contact.html"><button class="cta-btn-journey">Try it for free</button></a>
         </div>
         <div class="right-journey">
           <div class="card-container-journey">
