minor bug fixes and mobile responsiveness innomaint pages

--- a/Field-service-management.html
+++ b/Field-service-management.html
@@ -72,6 +72,31 @@ Icon for services and Projects -->
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css'>
+
+  <style>
+      @media screen and (max-width: 700px) {
+        .pbanner-title {
+          font-size: 16px;
+        }
+
+        .rounded-pill {
+          border-radius: 1rem !important;
+        }
+
+        .rounded-pill .rounded-pill.bg-primary {
+          border-radius: .8rem !important;
+          margin-top: 1rem;
+        } 
+
+        .testimonial-img {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+  </style>
+
 </head>
 
 <body>
