--- a/procurement-management-software.html
+++ b/procurement-management-software.html
@@ -65,6 +65,38 @@ Icon for services and Projects -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+
+<style>
+  @media screen and (max-width: 600px) {
+    h1.mb-4.fw-bold {
+      font-size: 2rem !important;
+      line-height: 40px !important;
+    }
+
+    .rounded-pill {
+      border-radius: 1rem !important;
+    }
+
+    .rounded-pill h5 {
+      margin-right: 0;
+    }
+
+    .rounded-pill.bg-primary {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .testimonial-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+</style>
+
 </head>
 
 <body>
