--- a/workflow-automation.html
+++ b/workflow-automation.html
@@ -64,6 +64,34 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fi-css@2.0.1/dist/fi.css" />
 
+    <style>
+        .featured-item  {
+          border: 1px solid rgba(200, 200, 200, .25);
+        }
+        @media screen and (max-width: 700px) {
+          .pbanner-title {
+            font-size: 14px;
+          }
+  
+          .owl-carousel .owl-dots {
+            all: unset;
+            display: block;
+            text-align: center;
+            transform: translateY(-30px);
+          }
+  
+          .testimonial-img {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+          }
+          .testimonial-img img {
+            max-width: 50%;
+          }
+  
+        }
+      </style>
 
 </head>
 
