--- a/interactive-asset-floor-plan.html
+++ b/interactive-asset-floor-plan.html
@@ -66,8 +66,27 @@ Icon for services and Projects -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
  
  
- 
- 
+<style>
+  @media screen and (max-width: 700px) {
+
+    .rounded-pill {
+      border-radius: 1rem !important;
+    }
+
+    .rounded-pill .rounded-pill.bg-primary {
+      display: flex;
+      border-radius: .8rem !important;
+      margin-top: 1rem;
+    }
+
+    .testimonial-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+</style>
  
 </head>
  
