--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -64,6 +64,24 @@
  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fi-css@2.0.1/dist/fi.css" />
 
+ <style>
+  @media screen and (max-width: 700px) {
+    .testimonial-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .testimonial-img img {
+      max-width: 50%;
+    }
+
+    .cta-container {
+      margin-top: 4rem;
+    }
+    
+  }
+ </style>
 
 </head>
 
