--- a/team-collaboration-solution.html
+++ b/team-collaboration-solution.html
@@ -63,6 +63,34 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
+<style>
+  .featured-item  {
+    border: 1px solid rgba(200, 200, 200, .25);
+  }
+  @media screen and (max-width: 700px) {
+    .pbanner-title {
+      font-size: 14px;
+    }
+
+    .owl-carousel .owl-dots {
+      all: unset;
+      display: block;
+      text-align: center;
+      transform: translateY(-30px);
+    }
+
+    .testimonial-img {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .testimonial-img img {
+      max-width: 50%;
+    }
+
+  }
+</style>
 
 </head>
 
