Dec10 - fix minor bugs in 2 pages
OEE: fill gap in marquee, set icons to same thickness for consistency
TeamCollaboration: testimonial align images in center, add some padding

--- a/oee-monitoring.html
+++ b/oee-monitoring.html
@@ -353,15 +353,17 @@
           </div>
         </section>
 
-        <section class="py-0 background-gray">
+        <section class="py-0 background-gray" style="margin: 1rem 0 3.5rem 0;">
           <div class="container-fluid p-0">
             <div class="row">
               <div class="col-12">
                 <div class="marquee-title">
                   <div class="marquee-text">
-                    OEE Monitoring <i class="las la-asterisk"></i> Features
-                    <i class="las la-asterisk"></i> OEE Monitoring
-                    <i class="las la-asterisk"></i> Features <i class="las la-asterisk"></i>
+                    <i class="las la-asterisk"></i>OEE Monitoring
+                    <i class="las la-asterisk"></i>Features
+                    <i class="las la-asterisk"></i>OEE Monitoring
+                    <i class="las la-asterisk"></i>Features 
+                    <i class="las la-asterisk"></i>OEE Monitoring
                   </div>
                 </div>
               </div>
@@ -602,13 +604,13 @@
             </li>
 
             <li>
-              <i class="fi fi-ts-sparkles metric-icon"></i>
+              <i class="fi fi-tr-sparkles metric-icon"></i>
               <h5>Performance</h5>
               <p>Assess how efficiently the equipment operates.</p>
             </li>
 
             <li>
-              <i class="fi fi-rs-diamond metric-icon"></i>
+              <i class="fi fi-tr-diamond metric-icon"></i>
               <h5>Quality</h5>
               <p>Evaluate the ratio of good products to total products made.</p>
             </li>
