--- a/intelligent-contract-management.html
+++ b/intelligent-contract-management.html
@@ -59,6 +59,8 @@
 
     <link href="css/service.css" rel="stylesheet" type="text/css" />
     <link href="css/home.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/shortcodes.css">
+    <link rel="stylesheet" href="css/ivr-automation.css">
     <!-- inject css end -->
 
     <!-- 
@@ -67,6 +69,16 @@ Icon for services and Projects -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
 
     <link href="css/intelligent-contract-management.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/bautomate-subpages.css">
+
+    <style>
+        @media screen and (max-width: 700px) {
+        .accordion-item {
+        max-width: 100% !important;
+        width: 100% !important;
+    }
+        }        
+    </style>
 
 </head>
 
@@ -86,7 +98,7 @@ Icon for services and Projects -->
     <div class="banner-business-container">
         <div class="banner-business-content">
 
-            <h2 class="title gradientText">Intelligent Contract Management</h2>
+            <h2 class="banner-business-subtitle">Intelligent Contract Management</h2>
             <p class="banner-business-description" style="font-size: 1.5rem;">
                 Streamline and Optimize Your Contract Management with <span class="gradientText">Bautomate’s</span> Intelligent Automation
             </p>
@@ -278,7 +290,7 @@ Icon for services and Projects -->
                     <div class="accordion-item bg-transparent mb-4">
                         <h3 class="accordion-header" id="heading1">
                             <button class="accordion-button shadow-none mb-0 bg-transparent" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1" >
+                                data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
                                 Centralized Contract Repository
                                 <span class="accordion-arrow"></span>
                             </button>
@@ -359,15 +371,15 @@ Icon for services and Projects -->
                     </div>
 
                     <div class="accordion-item bg-transparent mb-4">
-                        <h3 class="accordion-header" id="heading5">
+                        <h3 class="accordion-header" id="heading6">
                             <button class="accordion-button shadow-none mb-0 bg-transparent collapsed" type="button"
-                                data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false"
-                                aria-controls="collapse5">
+                                data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false"
+                                aria-controls="collapse6">
                                 AI-Powered Clause and Risk Analysis
                                 <span class="accordion-arrow"></span>
                             </button>
                         </h3>
-                        <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
+                        <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 Detect non-compliant clauses and assess contract risk levels using AI-driven intelligence.
                             </div>
@@ -411,7 +423,7 @@ Icon for services and Projects -->
             </div>
     
             <div class="row">
-                <textarea name="" id="" rows="20" placeholder="Message"></textarea>
+                <textarea name="" id="" rows="2" placeholder="Message"></textarea>
             </div>
     
         </div>
