--- a/it-governance.html
+++ b/it-governance.html
@@ -367,7 +367,7 @@ Icon for services and Projects -->
     <h1 class="text-4xl font-bold text-center mb-8 section-title ">CONSULTING PRACTICES</h1>
 
     <!-- Consulting Practices Section -->
-    <div class="bg-secondary p-4 rounded-3 shadow-sm">
+    <div class=" p-4 rounded-3 shadow-sm" style="background-color: #303131">
 
       <!-- Governance Section -->
       <div class="my-4">
@@ -418,13 +418,13 @@ Icon for services and Projects -->
             <h5 class="fw-semibold">COMPLIANCE</h5>
           </div>
           <div class="col-6 col-sm-3 col-md-2 text-center">
-            <span class="text-dark fw-bold">PCIDSS</span>
+            <span class="text-white fw-bold">PCIDSS</span>
           </div>
           <div class="col-6 col-sm-3 col-md-2 text-center">
-            <span class="text-dark fw-bold">NCEMA</span>
+            <span class="text-white fw-bold">NCEMA</span>
           </div>
           <div class="col-6 col-sm-3 col-md-2 text-center">
-            <span class="text-dark fw-bold">DPL</span>
+            <span class="text-white fw-bold">DPL</span>
           </div>
           <div class="col-6 col-sm-3 col-md-2 text-center">
             <img src="./images/itgovernence/GDPR.png" alt="GDPR Logo" class="img-fluid" style="max-width: 100px;">
