footer spacing issue resolved

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,8 @@
 <style>
+
+.primary-footer {
+    padding-top: 50px; /* Adjust the value as needed */
+  }
   /* Footer Styling */
   @media (max-width: 768px) {
     /* Logo */
@@ -77,13 +81,15 @@
 </style>
 
 
-    <footer class="footer">
+    <footer class="footer" >
       <!-- Primary Footer -->
-      <div class="primary-footer">
+       
+      <div class="primary-footer" style="margin-top: 50px;">
         <div class="container">
           <div class="row">
+     
             <!-- Contact Information -->
-            <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
+            <div class="col-lg-4 col-md-6 mt-6 mt-lg-0">
               <a class="footer-logo d-inline-block logo mb-5" href="index.html">
                 <img class="img-fluid" src="images/smi-logo.png" alt="Logo" />
               </a>
