--- a/seim&threat-intelligence.html
+++ b/seim&threat-intelligence.html
@@ -300,7 +300,7 @@ Icon for services and Projects -->
       <p class="description-growth">
         With our robust security solutions, we ensure your business remains protected from cyber threats, allowing you to focus on growth and innovation. We provide comprehensive cybersecurity services tailored to safeguard your data and infrastructure.
       </p>
-      <button class="button-growth">Get Started</button>
+      <a href="contact.html"> <button class="button-growth">Get Started</button></a>
     </div>
     <div class="cards-growth">
       <div class="card-growth">
