--- a/facility-maintenance-management-software.html
+++ b/facility-maintenance-management-software.html
@@ -253,9 +253,14 @@ Icon for services and Projects -->
   .pbanner-content{
     padding: 0px;
   }
+  .pbanner-content img{
+    width: 350px;
+    
+  }
   .pbanner-container {
       padding: 10px;
   }
+  
 
   .pbanner-title {
       font-size: 0.9rem;
@@ -290,6 +295,11 @@ Icon for services and Projects -->
   }
 
 }
+@media screen and (max-width: 460px) {
+        .pbanner-title {
+          font-size: 15px;
+        }
+      }
 
 
 
@@ -570,7 +580,7 @@ Icon for services and Projects -->
         <div class="col-lg-8 col-md-12">
           <div class="reminderPill d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
           <h5 class="mb-0 me-4">Want To Manage Your Work Order Smartly?</h5>
-          <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Get Free Trial</h6></div>
+          <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><a href="#"><h6 class="mb-0">Get Free Trial</h6></a></div>
         </div>
         </div>
       </div>
@@ -1352,13 +1362,13 @@ Icon for services and Projects -->
         </div>
       </section>
 
-      <section class="pt-10 pb-0">
+      <section class="pt-5 pb-0">
         <div class="container">
           <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
               <div class="reminderPill d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
               <h5 class="mb-0 me-4">Want To Manage Your Work Order Smartly?</h5>
-              <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Get Demo</h6></div>
+              <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><a href="./contact.html"><h6 class="mb-0">Get Demo</h6></a></div>
             </div>
             </div>
           </div>
@@ -1368,7 +1378,7 @@ Icon for services and Projects -->
 
 
   <!-- Awards -->
-  <section class="pt-10 text-center mt-10 bg-footer-color" style="padding-bottom: 4rem;">
+  <section class="pt-5 text-center mt-5 bg-footer-color" style="padding-bottom: 3rem;">
     <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
           <div class="theme-title">
@@ -1427,7 +1437,7 @@ Icon for services and Projects -->
     </div>
   </section>
   <section class="py-0">
-    <div class="container">
+    <div class="container px-8">
       <div class="row">
         <div class="col">
           <div class="owl-carousel no-pb" data-dots="false" data-nav="true" data-items="1" data-autoplay="true" style="margin-bottom: 5rem;">
