--- a/Electronic-Data-Interchange.html
+++ b/Electronic-Data-Interchange.html
@@ -302,7 +302,7 @@ Icon for services and Projects -->
     </div>
 </section>
 
-<section class="py-0 pb-5">
+<section class="py-0 pb-3 pt-3">
   <div class="container-fluid p-0">
     <div class="row">
       <div class="col-12">
@@ -315,7 +315,7 @@ Icon for services and Projects -->
   </div>
 </section>
  
-<section class="pt-10">
+<section class="pt-3">
   <div class="container">
     
     <div class="row">
@@ -515,8 +515,32 @@ Icon for services and Projects -->
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
+
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
+
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
 </script>
 
 <!--footer end-->
