--- a/Field-service-management.html
+++ b/Field-service-management.html
@@ -95,6 +95,11 @@ Icon for services and Projects -->
           align-items: center;
         }
       }
+      @media screen and (max-width: 460px) {
+        .pbanner-title {
+          font-size: 15px;
+        }
+      }
   </style>
 
 </head>
@@ -324,7 +329,8 @@ Icon for services and Projects -->
               <h5 class="mb-0 ">Want To Manage Your WorkOrder Smartly?</h5>
 
               <div class="rounded-pill bg-primary py-2 px-10 ms-auto">
-                <h6 class="mb-0">Request for demo</h6>
+                <a href="#"><h6 class="mb-0">Request for demo</h6></a>
+                
               </div>
             </div>
           </div>
@@ -612,7 +618,7 @@ Icon for services and Projects -->
     <!--hero section end-->
 
 
-    <section class="pt-10" style="padding-bottom: 0 !important;">
+    <section class="pt-5" style="padding-bottom: 0 !important;">
       <div class="container-fluid">
         <div class="row align-items-center">
           <div class="col-lg-3 text-center">
@@ -1024,7 +1030,7 @@ Icon for services and Projects -->
 
     <!-- Clients section -->
 
-    <section class=" text-center pt-10 bg-dark-color">
+    <section class=" text-center pt-5 bg-dark-color">
       <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
           <div class="theme-title">
@@ -1210,7 +1216,7 @@ Icon for services and Projects -->
     <!--Frequently Asked Questions end-->
 
 
-    <section class="pt-10 text-center mt-10 bg-footer-color">
+    <section class="pt-5 text-center mt-10 bg-footer-color">
       <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
           <div class="theme-title">
@@ -1277,7 +1283,7 @@ Icon for services and Projects -->
     </div>
   </section>
   <section class="py-0">
-    <div class="container">
+    <div class="container px-8">
       <div class="row">
         <div class="col">
           <div class="owl-carousel no-pb" data-dots="false" data-nav="true" data-items="1" data-autoplay="true" style="margin-bottom: 5rem;">
