--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -184,7 +184,7 @@ Icon for services and Projects -->
 </section> -->
 
 <section>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
@@ -385,7 +385,7 @@ Icon for services and Projects -->
   
 
  
-<section class="pt-10">
+<section class="pt-5">
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
@@ -580,13 +580,38 @@ Icon for services and Projects -->
 
 <!--body content end--> 
 
+
 <script>
   fetch('footer.html')
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
+
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
+
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
 </script>
 <!--footer end-->
 
