--- a/ar&vr-services.html
+++ b/ar&vr-services.html
@@ -172,7 +172,7 @@
 
 
 <section>
-  <div class="container mt-5">
+  <div class="container mt-5 mb-5">
       <div class="row justify-content-center text-center mb-5">
           <div class="col-lg-8 col-md-12">
               <div class="theme-title">
@@ -264,7 +264,7 @@
 </section>
 
 
-<section class="pt-10 background-gray">
+<section class="pt-3 background-gray">
   <div class="container">
    
     <div class="row">
@@ -401,7 +401,7 @@
 
 
 
-<section class="pt-10">
+<section class="pt-5">
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
