--- a/business-intelligence-services.html
+++ b/business-intelligence-services.html
@@ -76,6 +76,25 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
+<style>
+  @media (max-width: 440px) {
+    .banner-content {
+        padding: 0px 0;
+    }
+    .banner {
+    position: relative;
+    height: 80vh;
+}
+.managed-it-solution{
+  margin-top: 0px;
+}
+.dev-tab-pane.dev-active{
+  text-align: justify;
+}
+}
+</style>
+
+
 <!-- inject css end -->
 
 </head>
@@ -467,7 +486,7 @@
       <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
           <div class="theme-title">
-            <h6>Our Solutions</h6>
+            <h6 style="margin-top: 50px;" class="managed-it-solution">Our Solutions</h6>
             <h2>Driving Projects From Ideation To Value-Driven Software Solutions</h2>
           </div>
         </div>
