--- a/cloud-computing-services.html
+++ b/cloud-computing-services.html
@@ -67,7 +67,16 @@
 
 <!-- inject css end -->
 
-
+<style>
+  @media (max-width: 440px) {
+    .banner-content {
+        padding: 0px 0;
+    }
+     .img-fluid{
+      height: 370px;
+     }
+}
+</style>
 
 </head>
 
