--- a/customer-relationship-management.html
+++ b/customer-relationship-management.html
@@ -254,7 +254,15 @@ Icon for services and Projects -->
       /* Smaller shadow on click */
     }
 
-
+    @media (max-width: 440px) {
+      .customerRelationship{
+        height: 100px;
+        width: 300px;
+      }
+      .crm-text-p-crm{
+        font-size: 15px !important;
+      }
+    }
 
   @media (max-width: 768px) {
 
@@ -448,7 +456,7 @@ Icon for services and Projects -->
           <i class="fas fa-user-check"></i> <!-- Customer Retention Icon -->
         </div>
         <div class="crm-text">
-          <p>
+          <p class="crm-text-p-crm">
             Retaining customers is less expensive and saves the effort of acquiring new customers.
             With a CRM System, you can implement customer retention strategies to help your business prosper.
           </p>
@@ -459,7 +467,7 @@ Icon for services and Projects -->
           <i class="fas fa-users"></i> <!-- CRM Tool Icon -->
         </div>
         <div class="crm-text">
-          <p>
+          <p class="crm-text-p-crm">
             A CRM Tool helps you improve customer experience by listening and responding to your customers better
             based on priorities, and accessing all records quickly.
           </p>
@@ -644,7 +652,7 @@ Icon for services and Projects -->
               <h5 class="mb-0 me-4" style="text-align: left;">Analyze, Coordinate, and Tweak Campaigns to Attract
                 Customers</h5>
               <div class="rounded-pill bg-primary py-2 px-10 ms-auto">
-                <h6 class="mb-0">Get started for absolutely free!</h6>
+                <h6 class="mb-0"><a href="#">Get started for absolutely free!</a></h6>
               </div>
             </div>
           </div>
@@ -1063,9 +1071,7 @@ Icon for services and Projects -->
           <div class="reminderPill col-lg-8 col-md-12">
             <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
               <h5 class="mb-0 me-4" style="text-align: left;">Scale up your business through smooth team efforts</h5>
-              <div class="rounded-pill bg-primary py-2 px-10 ms-auto">
-                <h6 class="mb-0">Request For a Free Demo Today!</h6>
-              </div>
+              <a href="contact.html" class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Request a Demo</h6></a>
             </div>
           </div>
         </div>
@@ -1190,7 +1196,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d5.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d6.png" style="padding-top:30px;" class="img-fluid"
                     alt="">
                 </div>
               </div>
@@ -1209,7 +1215,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d6.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d7.png" style="padding-top:30px;" class="img-fluid"
                     alt="">
                 </div>
               </div>
@@ -1228,7 +1234,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d7.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d5.png" style="padding-top:30px;" class="img-fluid"
                     alt="">
                 </div>
               </div>
