--- a/interactive-asset-floor-plan.html
+++ b/interactive-asset-floor-plan.html
@@ -667,8 +667,7 @@ Icon for services and Projects -->
         <div class="col-lg-8 col-md-12">
           <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
           <h5 class="mb-0 me-4">
-            See InnoMaint Maintenance
-Management System in Action
+            See InnoMaint Maintenance Management System in Action
           </h5>
           <a href="contact.html" class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Request a Demo</h6></a>
         </div>
@@ -741,7 +740,7 @@ Management System in Action
     </div>
   </section>
   <section class="py-0">
-    <div class="container">
+    <div class="container px-8">
       <div class="row">
         <div class="col">
           <div class="owl-carousel no-pb" data-dots="false" data-nav="true" data-items="1" data-autoplay="true" style="margin-bottom: 5rem;">
@@ -927,39 +926,6 @@ Management System in Action
 <!--back-to-top end-->
  
 <!-- inject js start -->
-<script>
-  fetch('footer.html')
-    .then(response => response.text())
-    .then(html => {
-      document.body.insertAdjacentHTML('beforeend', html);
-      initializeFooter();
-    })
-    .catch(error => console.error('Error loading the footer:', error));
- 
-  function initializeFooter() {
-    // Collapsible Section Handling with Smooth Transition
-    document.querySelectorAll('.footer-section-title').forEach((title) => {
-      title.addEventListener('click', () => {
-        const section = title.parentElement;
-        const menu = section.querySelector('.footer-menu');
-        const isOpen = section.classList.toggle('open');
- 
-        if (isOpen) {
-          menu.style.maxHeight = menu.scrollHeight + 'px';
-        } else {
-          menu.style.maxHeight = '0';
-        }
-      });
-    });
- 
-    // Dynamic Current Year Update
-    document.addEventListener("DOMContentLoaded", () => {
-      const currentYear = new Date().getFullYear();
-      document.getElementById("currentYear").textContent = currentYear;
-    });
-  }
-</script>
- 
 <!--== jquery -->
 <script src="js/jquery.min.js"></script>
  
