--- a/iot-development.html
+++ b/iot-development.html
@@ -71,6 +71,17 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+<style>
+  @media (max-width: 440px) {
+    .banner-content {
+        padding: 0px 0;
+    }
+    .banner {
+    position: relative;
+    height: 80vh;
+}
+}
+</style>
 
 <!-- inject css end -->
 
