--- a/managedIT.html
+++ b/managedIT.html
@@ -65,6 +65,20 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.8.55/css/materialdesignicons.min.css" rel="stylesheet">
 
+<style>
+  @media (max-width: 440px) {
+    .banner-content {
+        padding: 0px 0;
+    }
+    .banner {
+    position: relative;
+    height: 80vh;
+}
+.managed-it-solution{
+  margin-top: 0px;
+}
+}
+</style>
 
 <!-- inject css end -->
 
@@ -259,7 +273,7 @@
     <div class="row justify-content-center text-center mb-5">
       <div class="col-lg-8 col-md-12">
         <div class="theme-title mt-3">
-          <h6>Our Solutions</h6>
+          <h6 style="margin-top: 50px;" class="managed-it-solution">Our Solutions</h6>
           <h2 class="mt-3 mb-4">Driving Projects From Ideation To Value-Driven Software Solutions</h2>
         </div>
       </div>
